[Mac] Fix popup blocker animation's blurry end state.

The final state of the omnibox's popup blocker animation is drawn to a
non-integral point boundary, so the animated icon and text are blurry.
This change floors the incoming frame so that the animation is always
drawn to an integral point boundary.

R=avi@chromium.org
BUG=706114

Review-Url: https://codereview.chromium.org/2784103002
Cr-Commit-Position: refs/heads/master@{#460798}

Former-commit-id: 960575f6f8da2a8557c04adbeccc045cd51034b1